--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         const player = ruffle.createPlayer();
         const container = document.getElementById("container");
         container.appendChild(player);
-        player.load("movie.swf");
+        player.load("dagobah_duck_life_2.swf");
     });
 </script>
 <script src="path/to/ruffle/ruffle.js"></script>
