--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Ruffle.rs web demo</title>
 </head>
 <body>
+    <h1>WTF??</h1>
 <script>
     window.RufflePlayer = window.RufflePlayer || {};
     window.addEventListener("load", (event) => {
@@ -14,6 +15,6 @@
         player.load("dagobah_duck_life_2.swf");
     });
 </script>
-<script src="path/to/ruffle/ruffle.js"></script>
+<script src="main/ruffle/ruffle.js"></script>
 </body>
 </html>
